tests/golden/errors/undefined_var.xs
let y = does_not_exist
